--- a/my-practice-next/package.json
+++ b/my-practice-next/package.json
@@ -10,9 +10,9 @@
   },
   "dependencies": {
     "bootstrap": "^3.4.1",
-    "next": "14.2.5",
-    "react": "^18",
-    "react-dom": "^18",
+    "next": "^13.5.6",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "sass": "^1.77.8"
   },
   "devDependencies": {
