--- a/my-practice-next/package.json
+++ b/my-practice-next/package.json
@@ -9,16 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "antd": "^5.20.0",
     "bootstrap": "^3.4.1",
+    "jquery": "^3.7.1",
     "next": "^13.5.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "sass": "^1.77.8"
+    "react-slick": "^0.30.2",
+    "sass": "^1.77.8",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-slick": "^0.23.13",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
